Fix svg width images for desktop and margin-top for small devices on mobile-column css rule

--- a/src/assets/styles/main.module.css
+++ b/src/assets/styles/main.module.css
@@ -58,6 +58,7 @@ h1 {
 }
 
 
+
 @media (min-width: 768px) {
     .mobile-menu {
         display: none;
@@ -93,7 +94,8 @@ h1 {
 
 
     .mobile-column {
-        margin-top: -800px !important;
+        position: relative;
+        margin-top: -650px !important;
     }
 
     .back-arrow {
